--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
 <title>Café El Bahri</title>
 <link rel="icon" type=“image/png” sizes="512x512" href=logobahri.png> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
   @font-face {
     font-family: 'Dubai';
@@ -4057,3 +4057,4 @@ if (toggler_list) {
 <div id="end"></div>
 </body>
 </html>
+
