--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         background-image: url("bg.png");
         background-size: cover;    /* image couvre tout l'écran */
         background-repeat: no-repeat;  /* pas de répétition */
-       background-position: center;   
+        background-position: center;   
         background-color: var(--color-page);
+        background-attachment: scroll;
         min-height: 100vh;
       }
 @keyframes fadein {
@@ -4057,4 +4058,5 @@ if (toggler_list) {
 <div id="end"></div>
 </body>
 </html>
+
 
