--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         background-size: cover;    /* image couvre tout l'écran */
         background-repeat: no-repeat;  /* pas de répétition */
         min-height: 100vh;
+         background-attachment: scroll;
+
       }
 @keyframes fadein {
   from {
@@ -4055,6 +4057,7 @@ if (toggler_list) {
 <div id="end"></div>
 </body>
 </html>
+
 
 
 
