--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
          background-attachment: scroll;
 
       }
+  body::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.4);
+  z-index: -1;
+}
 @keyframes fadein {
   from {
     opacity: 0;
@@ -4057,6 +4064,7 @@ if (toggler_list) {
 <div id="end"></div>
 </body>
 </html>
+
 
 
 
