--- a/index.html
+++ b/index.html
@@ -150,7 +150,15 @@ body.noscroll {
   text-decoration: none;
   color: inherit;
 }
+@media (max-width: 768px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
 
+  .header h1 {
+    font-size: 1.5rem;
+  }
+}
 @media print {
   .mt-header {
     display: none;
@@ -4064,6 +4072,7 @@ if (toggler_list) {
 <div id="end"></div>
 </body>
 </html>
+
 
 
 
