--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
 <title>Café El Bahri</title>
 <link rel="icon" type=“image/png” sizes="512x512" href=logobahri.png> 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
   @font-face {
     font-family: 'Dubai';
@@ -32,10 +33,23 @@
         background-image: url("bg.png");
         background-size: cover;    /* image couvre tout l'écran */
         background-repeat: no-repeat;  /* pas de répétition */
+       background-position: center center;   
+        background-color: var(--color-page);
         min-height: 100vh;
-         background-attachment: scroll;
-
       }
+:root {
+  --fluid-scale: clamp(0.85, 1vw + 0.8, 1.15);
+}
+
+/* Typography – scales on all screens */
+body {
+  font-size: calc(16px * var(--fluid-scale));
+}
+
+h1 { font-size: clamp(1.8rem, 4vw, 2.8rem); }
+h2 { font-size: clamp(1.4rem, 3vw, 2.2rem); }
+h3 { font-size: clamp(1.2rem, 2.5vw, 1.8rem); }
+p  { font-size: clamp(0.95rem, 1.2vw, 1.1rem); }
 @keyframes fadein {
   from {
     opacity: 0;
@@ -4057,12 +4071,3 @@ if (toggler_list) {
 <div id="end"></div>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
