--- a/index.html
+++ b/index.html
@@ -33,33 +33,14 @@
   min-height: 100vh;
 
   background-image:
-    linear-gradient(rgba(255,255,255,0.9), rgba(255,255,255,0.9)),
-    url("p1.png"),
-    url("p2.png"),
-    url("p3.png"),
-    url("p4.png")
-    ;
+    linear-gradient(rgba(255, 255, 255, 0.9), rgba(93, 195, 254, 0.169)),
+    url("aa.png");
 
-  background-size:
-    cover,      /* pour le gradient */
-    60px 60px,  /* p1 */
-    60px 60px,  /* p2 */
-    60px 60px,  /* p3 */
-    60px 60px;  /* p4 */
-
+  background-size:cover;
   background-repeat:
-    no-repeat,  /* gradient */
-    repeat,     /* p1 */
-    repeat,     /* p2 */
-    repeat,     /* p3 */
-    repeat;     /* p4 */
-
+    no-repeat;
   background-position:
-    center,
-    top left,
-    top right,
-    bottom left,
-    bottom right;
+    center;
 
 }
       
@@ -4099,4 +4080,3 @@ if (toggler_list) {
 <div id="end"></div>
 </body>
 </html>
-
